<resources>
    <string name="app_name">FormX</string>
    <string name="copy_right">Copyrights © %1$d</string>

    <string name="connect_to_the_internet">Connect to the Internet</string>
    <string name="you_are_offline_check_your_connection">You are offline.Check your connection</string>
    <string name="retry">Retry</string>

    <string name="watch_us_on_youtube">Watch us on Youtube</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="connect_with_us">Connect with us</string>

    <string name="complete_profil">Complete Profil</string>

    <string name="sign_out">Sign Out</string>

    <string name="error">Error</string>
    <string name="success">Success</string>

    <string name="reset_succesful">Reset Successful!</string>
    <string name="please_wait">Please wait ...</string>
    <string name="internet_connected">Internet Connected</string>
    <string name="lost_internet_connection">Lost Internet Connection</string>

    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share_app">Share App</string>


    <string name="terms_of_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>

    <string name="email_title">Feedback about  %1$s Version %2$s</string>

    <string name="settings">Settings</string>

    <string name="sign_up">Sign Up</string>
    <string name="Password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="prenom">Surname</string>
    <string name="nom">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change Password</string>
    <string name="account">Account</string>
    <string name="login_txt_password_required">Password required !!</string>
    <string name="login_txt_username_required">Username required !!</string>
    <string name="loading">Loading .....</string>
    <string name="sign_in">Sign in</string>
    <string name="link_forgetpassword">Forget Password</string>
    <string name="btn_save">Save</string>
    <string name="current_Password">Current Password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirmation">Repeat new password</string>
    <string name="error_field_required">Field required !!</string>
    <string name="password_dont_match">Password don\'t match</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_key">Reset Key</string>
    <string name="msg_code_reset_password">We sent a message to your email address</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="reset">Reset</string>

    <string name="birthday">Birthday</string>
    <string name="birthplace">Birthplace</string>
    <string name="edit">Edit</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="max_exceeded">Max Exceeded</string>
    <string name="profil_edit">Profil Edit</string>
    <string name="don_t_have_account_sign_up_now">Don\'t have account ? <![CDATA[<font color="%1$s"><b> Sign Up now</b></font>]]></string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="your_password_has_been_reset">Your password has been reset</string>
    <string name="rate_us_on_play_store">Rate us on Play Store</string>
    <string name="skip">SKIP</string>
    <string name="started">Started</string>
    <string name="explains_what_information_we_collect_and_why_how_we_use_it_and_how_to_review_and_update_it">Explains what information we collect and why, how we use it, and how to review and update it.</string>
    <string name="read_our_privacy_policy">Read our Privacy Policy</string>
    <string name="describes_the_rules_you_agree_to_when_using_our_services">Describes the rules you agree to when using our services.</string>
    <string name="read_our_terms_of_service">Read our Terms of Service</string>
    <string name="password_error">between 4 and 10 alphanumeric characters</string>
    <string name="networkErrorCode">NO_INTERNET_CONNECTION</string>

    <string name="by_creating_an_account_you_agree_to_our_terms_of_services_and_privacy_policy">By creating an account you agree to our <![CDATA[<font color="%1$s"><b>Terms of Services</b></font>]]> and <![CDATA[<font color="%1$s"><b>Privacy Policy</b></font>]]></string>
    <string name="by_signing_up_i_accept_the_terms_and_conditions"> <![CDATA[ By signing up, I accept <b>the Terms and Conditions</b>]]></string>
    <string name="lorem">Lorem ipsum dolor sit amet, class proin phasellus ac donec a laoreet, pellentesque sapien. Aliquam vestibulum scelerisque feugiat ante. Magna sed, in vestibulum risus facilisis tellus,</string>
    <string name="name">Name</string>
    <string name="my_investigation">My Survey</string>
    <string name="txt_no">No</string>
    <string name="txt_yes">Yes</string>
    <string name="forms">Forms</string>
    <string name="sections">Sections</string>
    <string name="libelle">Libelle</string>
    <string name="question_type">Question Type</string>
    <string name="reports">Reports</string>
    <string name="cluster">Cluster</string>
    <string name="description">Description</string>
    <string name="mandatory">Mandatory</string>
    <string name="add_form">Add Form</string>
    <string name="add_section">Add Section</string>
    <string name="edit_section">Edit Section</string>
    <string name="edit_form">Edit Form</string>
    <string name="question_boolean">Boolean Question</string>
    <string name="question_date">Date Question</string>
    <string name="question_number">Number Question</string>
    <string name="question_spinner">Spinner Question</string>
    <string name="question_text">Text Question</string>
    <string name="question_time">Time Question</string>
    <string name="enquetes">Survey</string>
    <string name="list_of_sections">List of Sections</string>
    <string name="duplicate">Duplicate</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="bf_chosen_date">"Chosen Date - %s"</string>
    <string name="bf_chosen_time">"Chosen Time - %s"</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="or_sign_in_with">Or Sign In with</string>
    <string name="rationale_permissions_profil">This app needs access to your camera and your gallery.</string>
    <string name="Town">Town</string>
    <string name="no_form">No Form</string>
    <string name="no_cluster">No Cluster</string>
    <string name="no_report">No Report</string>
    <string name="no_section">No Section</string>
    <string name="no_question">No Question</string>
    <string name="home">Home</string>
    <string name="no_enquetes">No  Survey</string>
    <string name="operation_completes_successfully">Operation completes successfully</string>
    <string name="select_section">Select Section to import</string>
    <string name="select_form">Select Form</string>
    <string name="finish">Finish</string>
    <string name="edit_enquete">Edit Enquete</string>
    <string name="add_enquete">Add Enquete</string>
    <string name="edit_cluster">Edit Cluster</string>
    <string name="add_cluster">Add Cluster</string>
    <string name="confirm_delete">Confirm Delete...</string>
    <string name="are_you_sure_to_delete">Are you sure you want delete this?</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="no_users">No Users</string>
    <string name="draft">DRAFT</string>
    <string name="enquete_visibility">Enquete  Visibility</string>
    <string name="created_by">Created By Me</string>
    <string name="enquete_joined">Joined</string>
    <string name="accept">Accept</string>
    <string name="edit_report">Edit Report</string>
    <string name="add_report">Add Report</string>
    <string name="select_enquete">Select Enquete</string>
    <string name="join_survey">Join Survey</string>
    <string name="my_invitations">My Invitations</string>
    <string name="start">Start</string>
    <string name="thanks_for_your_reply">Thanks for  your reply</string>
    <string name="add_question">Add question</string>
    <string name="import_section">Import Section</string>
    <string name="options_values_isempty">Please  Add One Option</string>
</resources>
