<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_enquetes"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/reports" />

    <item
        android:id="@+id/navigation_cluster"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/cluster" />


    <item
        android:id="@+id/navigation_form"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/forms" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
</menu>