<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:id="@+id/libelle_til"
        android:hint="@string/libelle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/libelle_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:id="@+id/description_til"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mandatory" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/mandatory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/txt_no"
        android:textOn="@string/txt_yes"
        app:showText="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        style="@style/ButttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

</LinearLayout>