<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="8dp">

    <include
        layout="@layout/dialog_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/mandatory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mandatory"
        android:textOff="@string/txt_no"
        android:textOn="@string/txt_yes"
        app:showText="true" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        style="@style/ButttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

</LinearLayout>