<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/menu_about"
            style="@style/TextCardViewHeaderMenu"
            android:text="@string/about_us" />

        <TextView
            android:id="@+id/menu_terms"
            style="@style/TextCardViewHeaderMenu"
            android:text="@string/terms_of_services" />

        <TextView
            android:id="@+id/menu_privacy"
            style="@style/TextCardViewHeaderMenu"
            android:text="@string/privacy_policy" />


        <TextView
            android:id="@+id/menu_licences"
            style="@style/TextCardViewHeaderMenu"
            android:text="Licences" />
    </LinearLayout>
</androidx.cardview.widget.CardView>