<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                style="@style/TextCardView"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gender" />


            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_gender_male"
                    android:text="@string/gender_male"
                    android:textAppearance="@style/TextCardView" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_gender_female"
                    android:text="@string/gender_female"
                    android:textAppearance="@style/TextCardView" />
            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/nameLayout"
                android:hint="@string/nom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="8dp"

                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/surnameLayout"
                android:hint="@string/prenom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="8dp"

                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/birthdayLayout"
                android:hint="@string/birthday">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_cake_black_24dp"
                    android:drawablePadding="8dp"

                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/birthplaceLayout"
                android:hint="@string/birthplace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_on_black_24dp"
                    android:drawablePadding="8dp"

                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/phoneLayout"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_black_24dp"
                    android:drawablePadding="8dp"

                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/save"
                style="@style/ButttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>