<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <include
            layout="@layout/dialog_common"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mandatory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mandatory"
            android:textAppearance="@style/TextCardViewBold"
            android:textOff="@string/txt_no"
            android:textOn="@string/txt_yes"
            app:showText="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/options"
                style="@style/TextCardViewBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Options"
                app:layout_constraintStart_toEndOf="@+id/add_new"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/add_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_circle_black_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/ButttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>